[package]
name = "github-backup"
version = "3.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "string"] }
croner = "3.0.1"
ctrlc = "3.5.1"
gix = { version = "0.77.0", features = [
  "blocking-http-transport-reqwest-rust-tls",
] }
human-errors = { version = "0.2.2", features = ["pretty"] }
parse_link_header = "0.4.0"
pin-project = "1.1.10"
reqwest = { version = "0.12.28", default-features = false, features = [
  "brotli",
  "charset",
  "http2",
  "json",
  "rustls-tls",
] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "fs",
] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama", "opentelemetry", "sentry"] }
unicase = "2.8.1"

[dev-dependencies]
http = "1.4.0"
tempfile = "3.24.0"
rstest = "0.26.1"
wiremock = "0.6.2"

[features]
default = []
pure_tests = []

[profile.release]
debug = false
strip = "debuginfo"
