[package]
name = "github-backup"
version = "3.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "string"] }
croner = "3.0.1"
ctrlc = "3.5.2"
filt-rs = { version = "1.1.0", features = ["chrono", "regex", "serde"] }
gix = { version = "0.84.0", features = [
  "blocking-http-transport-reqwest-rust-tls",
] }
human-errors = { version = "0.2.3", features = ["pretty"] }
parse_link_header = "0.4.1"
pin-project = "1.1.13"
reqwest = { version = "0.12.28", default-features = false, features = [
  "brotli",
  "charset",
  "http2",
  "json",
  "multipart",
  "rustls-tls",
] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "fs",
] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["umami", "opentelemetry", "sentry"] }
unicase = "2.9.0"

[dev-dependencies]
http = "1.4.2"
tempfile = "3.25.0"
rstest = "0.26.1"
wiremock = "0.6.2"

[features]
default = []
pure_tests = []

[profile.release]
debug = false
strip = "debuginfo"
